<resources>
    <string name="app_name">Compenergy</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_header_text">Select an option from the menu</string>
    <string name="navigation_second_group_title">More</string>
    <string name="nav_item_compare">Compare</string>
    <string name="nav_item_data">Data</string>
    <string name="nav_item_add_data">Add Data</string>
    <string name="nav_item_favorites">Favorites</string>
    <string name="nav_item_submit_data">Submit Data</string>
    <string name="nav_item_settings">Settings</string>
    <string name="nav_item_about">About</string>
    <string name="nav_item_help">Help</string>
    <string name="carrier_type_db_capacity" translatable="false">Capacity</string>
    <string name="carrier_type_db_consumption" translatable="false">Consumption</string>
    <string name="carrier_type_db_volume_consumption" translatable="false">Volume Consumption</string>
    <string name="carrier_type_db_content_mass" translatable="false">Content Mass</string>
    <string name="carrier_type_db_content_volume" translatable="false">Content Volume</string>
    <string name="carrier_type_vehicle_only_client_side" translatable="false">Vehicle</string>
    <string-array translatable="false" name="spinner_carrier_types">
        <item>Electric producer</item>
        <item>Electric consumer</item>
        <item>Consumer by distance</item>
        <item>Mass energy content</item>
        <item>Volume energy content</item>
        <item>Vehicle</item>
    </string-array>
    <string-array translatable="false" name="spinner_carrier_types_without_vehicles">
        <item>Electric producer</item>
        <item>Electric consumer</item>
        <item>Consumer by distance</item>
        <item>Mass energy content</item>
        <item>Volume energy content</item>
    </string-array>
    <string-array translatable="false" name="spinner_energy_type">
        <item>Joule</item>
        <item>Kilojoule</item>
        <item>Megajoule</item>
        <item>Gram calorie</item>
        <item>Kilocalorie</item>
        <item>Watt hour</item>
        <item>Kilowatt hour</item>
        <item>Electronvolt</item>
        <item>British thermal unit</item>
        <item>US therm</item>
        <item>Foot-pound</item>
    </string-array>
    <string-array translatable="false" name="spinner_energy_type_electric">
        <item>Watt</item>
        <item>Kilowatt</item>
        <item>Megawatt</item>
    </string-array>
    <string-array translatable="false" name="spinner_energy_type_if_vehicle">
        <item>Gasoline</item>
        <item>Diesel</item>
        <item>Kerosene</item>
        <item>Liquefied Petroleum Gas</item>
        <item>Ethanol</item>
        <item>Hydrogen</item>
        <item>Methanol</item>
    </string-array>
    <string-array translatable="false" name="unit_list_time">
        <item>Seconds</item>
        <item>Minutes</item>
        <item>Hours</item>
        <item>Days</item>
        <item>Years</item>
    </string-array>
    <string-array translatable="false" name="unit_list_volume">
        <item>Cubic inch</item>
        <item>Cubic foot</item>
        <item>Cubic metre</item>
        <item>Imperial teaspoon</item>
        <item>Imperial tablespoon</item>
        <item>Imperial fluid ounce</item>
        <item>Imperial cup</item>
        <item>Imperial pint</item>
        <item>Imperial quart</item>
        <item>Imperial gallon</item>
        <item>Millilitre</item>
        <item>Litre</item>
        <item>US teaspoon</item>
        <item>US tablespoon</item>
        <item>US fluid ounce</item>
        <item>US legal cup</item>
        <item>US liquid pint</item>
        <item>US liquid quart</item>
        <item>US liquid gallon</item>
    </string-array>
    <string-array translatable="false" name="unit_list_mass">
        <item>Ounce</item>
        <item>Pound</item>
        <item>Stone</item>
        <item>US ton</item>
        <item>Imperial ton</item>
        <item>Microgram</item>
        <item>Milligram</item>
        <item>Gram</item>
        <item>Kilogram</item>
        <item>Ton</item>
    </string-array>
    <string-array translatable="false" name="unit_list_distance">
        <item>Nanometre</item>
        <item>Micrometre</item>
        <item>Millimetre</item>
        <item>Centimetre</item>
        <item>Metre</item>
        <item>Kilometre</item>
        <item>Mile</item>
        <item>Yard</item>
        <item>Foot</item>
        <item>Inch</item>
        <item>Nautical mile</item>
    </string-array>
    <string name="joule_lower_case">joule</string>
    <string name="watt_lower_case">watt</string>
    <string name="compare_type_capacity">capacity</string>
    <string name="compare_type_consumption">consumption</string>
    <string name="compare_type_volume_consumption">on 100 km</string>
    <string name="compare_type_mass_content">per kilogram</string>
    <string name="compare_type_volume_content">per litre</string>
    <string name="com_values_equal">values equal</string>
    <string name="com_percentage">percentage</string>
    <string name="com_times_bigger">times bigger</string>
    <string name="com_seconds">seconds</string>
    <string name="com_minutes">minutes</string>
    <string name="com_hours">hours</string>
    <string name="com_days">days</string>
    <string name="com_years">years</string>
    <string name="com_km">kilometre</string>
    <string name="com_kg">kilogram</string>
    <string name="com_litre">litre</string>
    <string name="data_search_hint">Search for an item…</string>
    <string name="add_data_name_edit_hint">Name</string>
    <string name="add_data_category_edit_hint">Category</string>
    <string name="add_data_energy_edit_hint">Energy</string>
    <string name="add_data_energy_edit_hint_if_vehicle">Avg. fuel consumption</string>
    <string name="add_data_unit_amount_edit_hint">Amount</string>
    <string name="add_data_unit_amount_edit_hint_if_vehicle">Distance</string>
    <string name="add_data_add_button">Add Item</string>
    <string name="intent_key_for_editor" translatable="false">CARRIER_DATA</string>
    <string name="edit_data_act_title">Edit Data</string>
    <string name="edit_data_name_edit_hint">Name</string>
    <string name="edit_data_category_edit_hint">Category</string>
    <string name="edit_data_unit_watt">Watt</string>
    <string name="edit_data_unit_joule">Joule</string>
    <string name="edit_data_button_title">Edit Item</string>
    <string name="edit_data_info_type_1">The energy output is defined in Watt</string>
    <string name="edit_data_info_type_2">The energy consumption is defined in Watt</string>
    <string name="edit_data_info_type_3">The energy consumption is defined in Joule on 100 Kilometres</string>
    <string name="edit_data_info_type_4">The energy content is defined in Joule per Kilogram</string>
    <string name="edit_data_info_type_5">The energy content is defined in Joule per Litre</string>
    <string name="act_selection_title">Select an item</string>
    <string name="act_selection_fav_group_title">Favorites</string>
    <string name="act_selection_intent_result_key_do_not_change" translatable="false">item</string>
    <string name="pref_database_group_title">Database</string>
    <string name="pref_database_group_title_key" translatable="false">compenergy.database.title</string>
    <string name="pref_database_reset_button">Reset database</string>
    <string name="pref_database_reset_summary">Resets all data to the default values and removes custom data sets</string>
    <string name="pref_database_reset_key" translatable="false">compenergy.database.reset</string>
    <string name="pref_database_delete_button">Delete all data</string>
    <string name="pref_database_delete_summary">Deletes every dataset and leaves you with an empty database</string>
    <string name="pref_database_delete_key" translatable="false">compenergy.database.delete</string>
    <string name="pref_database_hint_reset">Database reset successful</string>
    <string name="pref_database_hint_reset_failed">Database reset failed</string>
    <string name="pref_database_hint_delete">All data deleted</string>
    <string name="pref_database_hint_delete_failed">Data deletion failed</string>
    <string name="pref_database_loading_reset">Resetting database…</string>
    <string name="pref_database_loading_clear">Clearing database…</string>
    <string name="pref_appearance_group_title">Appearance</string>
    <string name="pref_appearance_group_title_key" translatable="false">compenergy.appearance.title</string>
    <string name="pref_appearance_show_gradient_title">Use Gradients</string>
    <string name="pref_appearance_show_gradient_summary">Turn off the animated gradient in the compare section here</string>
    <string name="pref_appearance_show_gradient_key" translatable="false">compenergy.appearance.show_gradient</string>
    <string name="name_already_exists">Name already exists</string>
    <string name="invalid_input">Invalid input</string>
    <string name="key_upper" translatable="false">compenergy.compare.upper_item</string>
    <string name="key_lower" translatable="false">compenergy.compare.lower_item</string>
    <string name="key_comp_upper" translatable="false">compenergy.compare.upper_compare_value</string>
    <string name="key_comp_lower" translatable="false">compenergy.compare.lower_compare_value</string>
    <string name="key_first_start" translatable="false">compenergy.compare.first_start</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_ok">Okay</string>
    <string name="dialog_compare">Compare</string>
    <string name="db_update_available">A database update is available</string>
    <string name="confirm_db_update">Do you want to update to the latest version?\nCustom data will be lost!</string>
    <string name="add_data_input_too_large_title">Input too large</string>
    <string name="add_data_input_too_large_message">One of the input values is too large for our largest datatype. Try using smaller values</string>
    <string name="data_delete_item_title">Delete</string>
    <string name="data_delete_confirm">Do you want to delete</string>
    <string name="pref_confirmation">Are you sure?</string>
    <string name="pref_confirm_reset">Confirm reset</string>
    <string name="pref_confirm_deletion">Confirm deletion</string>
    <string name="dialog_no_internet_browser">No internet browser found</string>
    <string name="dialog_no_email_app">No E-Mail application found</string>
    <string name="dialog_edit_value_title">Edit value</string>
    <string name="dialog_sending_data">Sending Data…</string>
    <string name="dialog_setting_up_db">Setting up database…</string>
    <string name="item_deleted">Item deleted</string>
    <string name="item_added_to_db">Item added to the database</string>
    <string name="cant_change_that_value">Can not change that value</string>
    <string name="data_sent">Data sent successfully</string>
    <string name="data_not_sent">Could not send data</string>
    <string name="select_at_least_one">Select at least one item</string>
    <string name="about_placeholder_value">Value</string>
    <string name="about_author_title">Author</string>
    <string name="about_author_value">Johannes Mols</string>
    <string name="about_contact_title">Contact E-Mail</string>
    <string name="about_contact_value">compenergy.app@googlemail.com</string>
    <string name="about_app_version_title">Version</string>
    <string name="about_app_build_title">Build Number</string>
    <string name="about_database_version">Database Version</string>
    <string name="placeholder_item_listview">Item Name</string>
    <string name="placeholder_header_listview">Header</string>
</resources>