<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/pref_database_group_title"
        android:key="@string/pref_database_group_title_key">

        <Preference
            android:key="@string/pref_database_reset_key"
            android:title="@string/pref_database_reset_button"
            android:summary="@string/pref_database_reset_summary" />

        <Preference
            android:key="@string/pref_database_delete_key"
            android:title="@string/pref_database_delete_button"
            android:summary="@string/pref_database_delete_summary"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_appearance_group_title"
        android:key="@string/pref_appearance_group_title_key">

        <CheckBoxPreference
            android:title="@string/pref_appearance_show_gradient_title"
            android:summary="@string/pref_appearance_show_gradient_summary"
            android:key="@string/pref_appearance_show_gradient_key"
            android:defaultValue="true" />

    </PreferenceCategory>

</PreferenceScreen>