<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
            <item
                android:id="@+id/nav_compare"
                android:icon="@drawable/ic_menu_compare"
                android:title="@string/nav_item_compare"
                android:checked="true"/>
            <item
                android:id="@+id/nav_data"
                android:icon="@drawable/ic_menu_data"
                android:title="@string/nav_item_data" />
            <item
                android:id="@+id/nav_add_data"
                android:icon="@drawable/ic_menu_add_data"
                android:title="@string/nav_item_add_data" />
            <item
                android:id="@+id/nav_favorites"
                android:icon="@drawable/ic_menu_favorites"
                android:title="@string/nav_item_favorites" />
            <item
                android:id="@+id/nav_submit_data"
                android:icon="@drawable/ic_menu_submit_data"
                android:title="@string/nav_item_submit_data" />
    </group>

    <item android:title="@string/navigation_second_group_title">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_settings"
                    android:icon="@drawable/ic_menu_settings"
                    android:title="@string/nav_item_settings" />
                <item
                    android:id="@+id/nav_about"
                    android:icon="@drawable/ic_menu_about"
                    android:title="@string/nav_item_about" />
                <item
                    android:id="@+id/nav_help"
                    android:icon="@drawable/ic_menu_help"
                    android:title="@string/nav_item_help" />
            </group>
        </menu>
    </item>

</menu>
