<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_act_edit"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="johannes.mols.compenergy.ActEditCarrier"
    tools:showIn="@layout/act_edit_layout" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:descendantFocusability="beforeDescendants"
        tools:ignore="UselessParent">

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            tools:ignore="UselessParent">

            <EditText
                android:id="@+id/edit_data_name_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/edit_data_name_edit_hint"
                android:layout_marginBottom="8dp"
                android:drawableEnd="@drawable/ic_close_black_24dp" />

            <johannes.mols.compenergy.InstantAutoComplete
                android:id="@+id/edit_data_category_autocomplete_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/edit_data_category_edit_hint"
                android:layout_marginBottom="8dp"
                android:drawableEnd="@drawable/ic_close_black_24dp" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp" >

                <EditText
                    android:visibility="invisible"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:ignore="LabelFor,TextFields" />

                <Spinner
                    android:id="@+id/edit_data_type_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    style="@style/Widget.AppCompat.Spinner.Underlined"/>

            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="8dp">

                <EditText
                    android:id="@+id/edit_data_energy_edit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:hint="@string/add_data_energy_edit_hint"
                    android:layout_gravity="start"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/edit_data_energy_type"
                    android:textSize="18sp"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:text="@string/edit_data_unit_joule"
                    android:gravity="center_vertical"
                    android:textColor="?attr/editTextColor">

                </TextView>

            </LinearLayout>

            <TextView
                android:id="@+id/edit_data_type_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/primary_text_light"
                android:layout_marginBottom="8dp" />

            <Button
                android:id="@+id/edit_data_edit_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edit_data_button_title"/>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>