<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:descendantFocusability="beforeDescendants"
        tools:ignore="UselessParent" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="0dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:descendantFocusability="beforeDescendants" >

            <TextView
                android:id="@+id/fragment_about_author_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:textSize="14sp"
                android:textAllCaps="true"
                android:text="@string/about_author_title"
                android:textAlignment="textStart"
                android:textColor="@color/gray_text"  />

            <TextView
                android:id="@+id/fragment_about_author_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_below="@+id/fragment_about_author_title"
                android:textSize="16sp"
                android:text="@string/about_placeholder_value"
                android:textAllCaps="false"
                android:textAlignment="textStart"
                android:textColor="@color/dark_text"  />

            <TextView
                android:id="@+id/fragment_about_contact_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/fragment_about_author_value"
                android:textSize="14sp"
                android:textAllCaps="true"
                android:text="@string/about_contact_title"
                android:textAlignment="textStart"
                android:textColor="@color/gray_text"  />

            <TextView
                android:id="@+id/fragment_about_contact_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_below="@+id/fragment_about_contact_title"
                android:textSize="16sp"
                android:text="@string/about_placeholder_value"
                android:textAllCaps="false"
                android:textAlignment="textStart"
                android:textColor="@color/dark_text"  />

            <TextView
                android:id="@+id/fragment_about_version_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/fragment_about_contact_value"
                android:textSize="14sp"
                android:textAllCaps="true"
                android:text="@string/about_app_version_title"
                android:textAlignment="textStart"
                android:textColor="@color/gray_text"  />

            <TextView
                android:id="@+id/fragment_about_version_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_below="@+id/fragment_about_version_title"
                android:textSize="16sp"
                android:text="@string/about_placeholder_value"
                android:textAllCaps="false"
                android:textAlignment="textStart"
                android:textColor="@color/dark_text"  />

            <TextView
                android:id="@+id/fragment_about_build_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/fragment_about_version_value"
                android:textSize="14sp"
                android:textAllCaps="true"
                android:text="@string/about_app_build_title"
                android:textAlignment="textStart"
                android:textColor="@color/gray_text"  />

            <TextView
                android:id="@+id/fragment_about_build_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_below="@+id/fragment_about_build_title"
                android:textSize="16sp"
                android:text="@string/about_placeholder_value"
                android:textAllCaps="false"
                android:textAlignment="textStart"
                android:textColor="@color/dark_text"  />

        </RelativeLayout>

    </ScrollView>

</LinearLayout>